tests/negative/typecheck/type_eq_false.orng
// 
fn main() -> Int {
    if Int == Bool {
        unreachable
    } else {
        252
    }
}